@startuml

title __AREAS's Class Diagram__\n

  namespace Areas {
    abstract class Areas.Area {
        {static} + areaList : List<Area>
        + areaType : String
        + available : boolean
        + capacity : long
        + dimensionW : int
        + distance : int
        + id : int
        + neighbours : HashMap<Area, Integer>
        + stars : int
        # dimensionH : int
        # imageLocation : String
        # roomImage : Image
        # roomImageView : ImageView
        # x : int
        # y : int
        {static} + getAreaList()

        # createSprite()
    }
  }
  

  namespace Areas {
    class Areas.Cinema {
        + Cinema()
        + startMovie()
        + stopMovie()
    }
  }
  

  namespace Areas {
    class Areas.Elevator {
        + Elevator()
    }
  }
  

  namespace Areas {
    class Areas.Fitness {
        + Fitness()
    }
  }
  

  namespace Areas {
    class Areas.HotelRoom {
        + HotelRoom()
        + getImageForStars()
    }
  }
  

  namespace Areas {
    class Areas.Lobby {
        + Lobby()
    }
  }
  

  namespace Areas {
    class Areas.Restaurant {
        + Restaurant()
    }
  }
  

  namespace Areas {
    class Areas.Stairway {
        + Stairway()
    }
  }
  

  Areas.Area o-- Areas.Area : latest
  Areas.Cinema -up-|> Areas.Area
  Areas.Elevator -up-|> Areas.Area
  Areas.Fitness -up-|> Areas.Area
  Areas.HotelRoom -up-|> Areas.Area
  Areas.Lobby -up-|> Areas.Area
  Areas.Restaurant -up-|> Areas.Area
  Areas.Stairway -up-|> Areas.Area


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
